# ahrs

./: .clang-format  .config  CMakeLists.txt  Kconfig  Makefile  README.md  tree.txt
app/: CMakeLists.txt  user_main.c
app/shell/: shell_port.c  shell_port.h
board/: CMakeLists.txt
board/stm32/g4/stm32g431kbu6/v1/: .config.old  CMakeLists.txt  board.c  board.h  board_config.h
board/stm32/g4/stm32g431kbu6/v1/hal/: drv_board.h  drv_crc.c  drv_crc.h  drv_flash.c  drv_flash.h  drv_gpio.c  drv_gpio.h  drv_spi.c  drv_spi.h  drv_uart.c  drv_uart.h  drv_usb.c  drv_usb.h
board/stm32/g4/stm32g431kbu6/v1/linker/: STM32G431XX_FLASH.ld
boards/stm32/g4/stm32g431kbu6/v1/cubemx/board/: .gitignore
boards/stm32g431kbu6/: board.c  board.h  board_config.h
boards/stm32g431kbu6/cubemx/board/: board.ioc
boards/stm32g431kbu6/cubemx/board/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
boards/stm32g431kbu6/cubemx/board/Core/Src/: i2c.c  main.c  stm32g4xx_it.c  usart.c
chips/stm32/g4xx/hal/: chip_i2c.c  chip_spi.h  chip_system.c  chip_system.h
chips/stm32/g4xx/port/: chip_gpio.c  chip_gpio.h  chip_i2c.h  chip_spi.c
docs/:  coding_standards.txt  boards_layer_design.txt  chips_layer_design.txt  generate_arch_pdf.py
driver/: CMakeLists.txt
driver/baro/: CMakeLists.txt
drivers/hal/: bus_i2c.h  bus_spi.h  device.c  device.h  drv_gpio.h
lib/: CMakeLists.txt
lib/common/: stdinc.h
lib/lwrb/: lwrb.c  lwrb.h  lwrb_ex.c
lib/printf/: CMakeLists.txt  printf_port.c
middleware/: CMakeLists.txt
tool/scripts/: kconfig_gen.py
(+8 files in other folders)
